# HatsPlusPlus-Editor-rs

./: Cargo.toml  rustfmt.toml  text.json
AnimatedFridgesCollection/: Hats++.xml  mod.conf  mod.csproj
AnimatedFridgesCollection/src/: AnimatedFridgesCollection.cs
Hats/: nikotemp.aseprite
Hats/Megumin/EEE/: Thumbs.db
Hats/white circle/: Thumbs.db
TerrariaHatsPack/: TerrariaHatsPack_compiled.hash  mod.conf  mod.csproj  mod.sln
TerrariaHatsPack/src/: Core.cs  TerrariaHatsPack.cs
src/: animation.rs  animation_window.rs  animations.rs  colors.rs  egui_utils.rs  event_bus.rs  file_utils.rs  frames_from_range.rs  hat_utils.rs  hats.rs  image_extensions.rs  is_range.rs  main.rs  metapixels.rs  prelude.rs  renderer.rs  shader.rs  shader_reloader.rs  shortcuts.rs  sprite.rs  sprite_drawer.rs  tabs.rs  texture.rs  texture_reloader.rs  ui_text.rs
src/anim_shader/: frag.glsl
src/catppuccin_egui/: mod.rs  themes.rs
src/room_shader/: frag.glsl  vert.glsl
